[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/Estaciones/EstacionRecarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estaciones/RecargaSFX.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estaciones/VacioSFX.wav" type="AudioStream" id=5]
[ext_resource path="res://Juego/Estaciones/RecargandoSFX.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 61.5522
height = 119.382

[sub_resource type="Animation" id=2]
resource_name = "Activado"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/Estacion:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1.1, 0.9, 1.1, 0.9, 1.1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 3 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 25

[node name="Estacion" type="Sprite" parent="AreaColision"]
rotation = 4.80609
z_index = 1
z_as_relative = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
visible = false
shape = SubResource( 1 )

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]

[node name="RecargandoSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "SFX"
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="RecargandoSFX"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Activado"
anims/Activado = SubResource( 2 )
anims/default = SubResource( 3 )

[node name="SinEnergiaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.442
pitch_scale = 0.86
bus = "SFX"
[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
